@@ -457,6 +457,11 @@ specifier|private
 name|long
 name|containerMetricsPeriodMs
 decl_stmt|;
+DECL|field|containerMetricsUnregisterDelayMs
+specifier|private
+name|long
+name|containerMetricsUnregisterDelayMs
+decl_stmt|;
 annotation|@
 name|VisibleForTesting
 DECL|field|trackingContainers
@@ -806,6 +811,23 @@ argument_list|,
 name|YarnConfiguration
 operator|.
 name|DEFAULT_NM_CONTAINER_METRICS_PERIOD_MS
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|containerMetricsUnregisterDelayMs
+operator|=
+name|conf
+operator|.
+name|getLong
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_CONTAINER_METRICS_UNREGISTER_DELAY_MS
+argument_list|,
+name|YarnConfiguration
+operator|.
+name|DEFAULT_NM_CONTAINER_METRICS_UNREGISTER_DELAY_MS
 argument_list|)
 expr_stmt|;
 name|long
@@ -1915,6 +1937,8 @@ argument_list|(
 name|containerId
 argument_list|,
 name|containerMetricsPeriodMs
+argument_list|,
+name|containerMetricsUnregisterDelayMs
 argument_list|)
 decl_stmt|;
 name|usageMetrics
@@ -2137,6 +2161,8 @@ argument_list|(
 name|containerId
 argument_list|,
 name|containerMetricsPeriodMs
+argument_list|,
+name|containerMetricsUnregisterDelayMs
 argument_list|)
 operator|.
 name|recordMemoryUsage
@@ -2158,6 +2184,8 @@ argument_list|(
 name|containerId
 argument_list|,
 name|containerMetricsPeriodMs
+argument_list|,
+name|containerMetricsUnregisterDelayMs
 argument_list|)
 operator|.
 name|recordCpuUsage
@@ -2726,6 +2754,8 @@ argument_list|(
 name|containerId
 argument_list|,
 name|containerMetricsPeriodMs
+argument_list|,
+name|containerMetricsUnregisterDelayMs
 argument_list|)
 decl_stmt|;
 name|int
