@@ -92,6 +92,58 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|metrics2
+operator|.
+name|impl
+operator|.
+name|MetricsSystemImpl
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ApplicationAttemptId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ApplicationId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|yarn
 operator|.
 name|api
@@ -133,6 +185,18 @@ operator|.
 name|Assert
 operator|.
 name|assertNotNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
 import|;
 end_import
 
@@ -266,6 +330,8 @@ argument_list|(
 name|containerId
 argument_list|,
 literal|100
+argument_list|,
+literal|1
 argument_list|)
 decl_stmt|;
 name|metrics
@@ -536,6 +602,8 @@ argument_list|(
 name|containerId
 argument_list|,
 literal|100
+argument_list|,
+literal|1
 argument_list|)
 decl_stmt|;
 name|int
@@ -723,6 +791,240 @@ expr_stmt|;
 name|collector
 operator|.
 name|clear
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testContainerMetricsFinished ()
+specifier|public
+name|void
+name|testContainerMetricsFinished
+parameter_list|()
+throws|throws
+name|InterruptedException
+block|{
+name|MetricsSystemImpl
+name|system
+init|=
+operator|new
+name|MetricsSystemImpl
+argument_list|()
+decl_stmt|;
+name|system
+operator|.
+name|init
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|MetricsCollectorImpl
+name|collector
+init|=
+operator|new
+name|MetricsCollectorImpl
+argument_list|()
+decl_stmt|;
+name|ApplicationId
+name|appId
+init|=
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|1234
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|ApplicationAttemptId
+name|appAttemptId
+init|=
+name|ApplicationAttemptId
+operator|.
+name|newInstance
+argument_list|(
+name|appId
+argument_list|,
+literal|4
+argument_list|)
+decl_stmt|;
+name|ContainerId
+name|containerId1
+init|=
+name|ContainerId
+operator|.
+name|newContainerId
+argument_list|(
+name|appAttemptId
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|ContainerMetrics
+name|metrics1
+init|=
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|ContainerId
+name|containerId2
+init|=
+name|ContainerId
+operator|.
+name|newContainerId
+argument_list|(
+name|appAttemptId
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|ContainerMetrics
+name|metrics2
+init|=
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId2
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|ContainerId
+name|containerId3
+init|=
+name|ContainerId
+operator|.
+name|newContainerId
+argument_list|(
+name|appAttemptId
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|ContainerMetrics
+name|metrics3
+init|=
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId3
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|metrics1
+operator|.
+name|finished
+argument_list|()
+expr_stmt|;
+name|metrics2
+operator|.
+name|finished
+argument_list|()
+expr_stmt|;
+name|system
+operator|.
+name|sampleMetrics
+argument_list|()
+expr_stmt|;
+name|system
+operator|.
+name|sampleMetrics
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+name|system
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+comment|// verify metrics1 is unregistered
+name|assertTrue
+argument_list|(
+name|metrics1
+operator|!=
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// verify metrics2 is unregistered
+name|assertTrue
+argument_list|(
+name|metrics2
+operator|!=
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId2
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// verify metrics3 is still registered
+name|assertTrue
+argument_list|(
+name|metrics3
+operator|==
+name|ContainerMetrics
+operator|.
+name|forContainer
+argument_list|(
+name|system
+argument_list|,
+name|containerId3
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|system
+operator|.
+name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
